[package]
name = "share_screen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "share_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "process", "macros"] }
local-ip-address = "0.6"
mdns-sd = "0.11"
dns-lookup = "2"
# Screen sharing
xcap = "0.3"
image = "0.25"
base64 = "0.22"
tokio-tungstenite = "0.24"
futures-util = "0.3"
lazy_static = "1.5"
uuid = { version = "1", features = ["v4"] }

